lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:34: error: type mismatch;
 found   : Unit
 required: Boolean
	if (sens=1) {
                ^